--- a/src/components/UI/Toast/ToastFooter/ToastFooter.module.scss
+++ b/src/components/UI/Toast/ToastFooter/ToastFooter.module.scss
@@ -1,15 +1,16 @@
 @import '../../../../index';
 
 .toastFooter {
-  margin-bottom: 5px;
+  margin-bottom: 4px;
   display: flex;
   flex-flow: column nowrap;
 }
 
 .transferLogLink {
   cursor: pointer;
+  padding-top: 4px;
   font-size: 12px;
-  color: $--color-granite-gray;
-  text-decoration: underline;
-  align-self: flex-end;
+  line-height: 18px;
+  color: $--color-orange-soda;
+  align-self: flex-start;
 }
